package _2_结构型模式._2_桥接模式_Bridge;

public class HongqiEngine implements Engine {
    public void start() {
        System.out.println("Start Hongqi Engine...");
    }
}
