@startuml

'https://www.liaoxuefeng.com/wiki/1252599548343744/1281319266943009
'来自廖雪峰老师的教程总结
'使用桥接模式的好处在于，如果要增加一种引擎，
'只需要针对Engine派生一个新的子类，如果要增加一个品牌，
'只需要针对RefinedCar派生一个子类，
'任何RefinedCar的子类都可以和任何一种Engine自由组合，
'即一辆汽车的两个维度：品牌和引擎都可以独立地变化。

abstract class Car {
    # engine: Engine
    + Car(engine: Engine): Car
    + {abstract} drive(): void
}

abstract class RefindCar extends Car {
    + RefindCar(engine: Engine): RefindCar
    + {abstract} getBrand(): String
}

interface Engine {
    + start(): void
}

class HongqiCar extends RefindCar {
    + HongqiCar(engine: Engine): HongqiCar
}

class HongqiEngine implements Engine

Car o--> Engine

HongqiCar o--> HongqiEngine

@enduml